# plex-ai

./: .gitignore  CLAUDE.md  README.md
backend/: .dockerignore  .env.example  Dockerfile  compose.yaml  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/agents/: plex.py
backend/app/models/: __init__.py  agent.py  auth.py  media.py
backend/app/routers/: __init__.py  agent.py  auth.py  media.py
backend/app/services/: __init__.py  agent_service.py  cache.py  conversation_store.py  plex_auth.py  plex_client.py
backend/tests/: conftest.py  test_agent_service.py  test_cache.py  test_conversation_store.py  test_dependencies.py  test_main.py  test_plex_auth.py  test_plex_client.py  test_plex_tools.py  test_router_agent.py  test_router_auth.py  test_router_media.py
deploy/: deploy-frontend.sh  docker-compose.prod.yaml
deploy/nginx/: nginx.conf
frontend/: index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: agent.test.ts  agent.ts  auth.test.ts  auth.ts  client.test.ts  client.ts  media.test.ts  media.ts
frontend/src/contexts/: WatchlistContext.tsx
frontend/src/hooks/: useAgent.test.ts  useAgent.ts  useAuth.ts  useCachedThumbnail.test.ts  useCachedThumbnail.ts  useClientIdentifier.ts  useIntersectionObserver.test.ts  useIntersectionObserver.ts  useMediaItems.ts
frontend/src/pages/: AgentPage.module.css  AgentPage.test.tsx  (+9 more)
infra/: .gitignore  cloudfront.tf  ec2.tf  iam.tf  main.tf  outputs.tf  s3.tf  ssm.tf  terraform.tfvars.example  user-data.sh  variables.tf
(+37 files in other folders)
